added core location manager and update user's location, handle permissions

--- a/WeatherApp/Info.plist
+++ b/WeatherApp/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to determine a current weather.</string>
 </dict>
 </plist>
