--- a/WeatherApp/Info.plist
+++ b/WeatherApp/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>APIBaseURL</key>
+    <string>http://api.openweathermap.org</string>
+    <key>APIPrefix</key>
+    <string>data</string>
+    <key>APIVersion</key>
+    <string>2.5</string>
+    <key>APIAPPID</key>
+    <string>5020fc146ad33359b3bcf17b0bf007c2</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
